zotero-standalone-build (5.0.33+dfsg-1) unstable; urgency=medium

  * New upstream release.
    - Update zotero commit IDs in d/rules

 -- Diane Trout <diane@ghic.org>  Thu, 18 Jan 2018 09:36:41 -0800

zotero-standalone-build (4.0.29.16+dfsg-1) unstable; urgency=medium

  * New upstream version 4.0.29.16.
    + Upstream has ceased to use a separate version numbering for
      zotero-standalone-build. Therefore we now follow the version number of
      the zotero extension itself, and pin down specific git commits for the
      separate zotero-build and zotero-standalone-build repositories.
    + Compatible with Firefox 50. (Closes: #845943)
  * d/copyright: reflect upstream changes.
  * d/rules: new get-orig-source, for new source package layout.
  * d/control: add rsync in build dependencies.
  * d/control: bump minimal required Firefox version to 45.
  * d/p/firefox-48.patch: drop patch, no longer needed.
  * Bump to debhelper compat level 10.
  * d/watch: update to format v4; point directly to zotero github.
  * Add keywords to zotero.desktop.

 -- Sébastien Villemot <sebastien@debian.org>  Tue, 17 Jan 2017 19:04:05 +0100

zotero-standalone-build (4.0.29.5+dfsg-2) unstable; urgency=medium

  * d/p/firefox-48.patch: new patch, fixes startup issue with Firefox 48.
  * Bump Standards-Version to 3.9.8, no changes needed.
  * d/control: clarify the relation of zotero-standalone with firefox.
    (Closes: #825104)

 -- Sébastien Villemot <sebastien@debian.org>  Thu, 18 Aug 2016 23:14:14 +0200

zotero-standalone-build (4.0.29.5+dfsg-1) unstable; urgency=medium

  * Imported Upstream version 4.0.29.5+dfsg
  * d/copyright: reflect upstream changes.
  * 06_Max_Version.diff: no more maximum Firefox version for standalone zotero.
  * d/s/lintian-overrides: update list of false positive for minified JS.

 -- Sébastien Villemot <sebastien@debian.org>  Sun, 27 Mar 2016 21:03:20 +0200

zotero-standalone-build (4.0.29.2+dfsg-1) unstable; urgency=medium
